[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/variations/0/Var0.gd" type="Script" id=1]
[ext_resource path="res://assets/font/Montserrat-SemiBold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/theme/pensatta-theme.tres" type="Theme" id=5]
[ext_resource path="res://assets/font/Montserrat-Bold.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/img/TitleRect.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 41
font_data = ExtResource( 6 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 1.88782
margin_right = 1441.89
margin_bottom = 900.0
color = Color( 0, 0.556863, 0.52549, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Aciertos" type="Label" parent="."]
visible = false
margin_left = 296.0
margin_top = 792.0
margin_right = 517.0
margin_bottom = 842.0
theme = ExtResource( 5 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Aciertos: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FinishedButton" type="Button" parent="."]
margin_left = 982.0
margin_top = 794.0
margin_right = 1370.0
margin_bottom = 841.0
theme = ExtResource( 5 )
text = "REALIZADO"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RectTitleSprite" type="Sprite" parent="."]
position = Vector2( 0, 40 )
texture = ExtResource( 7 )
centered = false

[node name="TitleLabel" type="Label" parent="RectTitleSprite"]
margin_left = 88.2626
margin_top = 7.93414
margin_right = 507.263
margin_bottom = 58.9341
custom_fonts/font = SubResource( 3 )
text = "Lluvia Contrase√±as"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="."]
margin_left = 54.0
margin_top = 144.0
margin_right = 1386.0
margin_bottom = 738.0
custom_constants/vseparation = 150
custom_constants/hseparation = 650
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="FinishedButton" to="." method="_on_FinishedButton_pressed"]
