[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/variations/0/Var0.gd" type="Script" id=1]
[ext_resource path="res://assets/font/Montserrat-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scenes/variations/0/Bloque.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFont" id=1]
size = 22
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 900.0
margin_bottom = 600.0
color = Color( 1, 0.913725, 0.839216, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InstructionLabel" type="Label" parent="."]
margin_left = 44.0
margin_top = 23.0
margin_right = 237.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.396078, 0.25098, 0.384314, 1 )
text = "Determine si las siguientes contraseñas son seguras o inseguras:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Aciertos" type="Label" parent="."]
margin_left = 40.0
margin_top = 536.0
margin_right = 757.0
margin_bottom = 564.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.396078, 0.25098, 0.384314, 1 )
text = "Aciertos: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FinishedButton" type="Button" parent="."]
margin_left = 755.0
margin_top = 551.0
margin_right = 844.0
margin_bottom = 578.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.980392, 0.584314, 0.47451, 1 )
text = "Realizado"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SavedNode" type="Node" parent="."]

[node name="Saved1" type="Label" parent="SavedNode"]
margin_left = 128.0
margin_top = 128.0
margin_right = 376.0
margin_bottom = 156.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.396078, 0.25098, 0.384314, 1 )
text = "Respuesta Guardada"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Saved2" type="Label" parent="SavedNode"]
margin_left = 480.0
margin_top = 128.0
margin_right = 728.0
margin_bottom = 156.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.396078, 0.25098, 0.384314, 1 )
text = "Respuesta Guardada"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Saved3" type="Label" parent="SavedNode"]
margin_left = 128.0
margin_top = 272.0
margin_right = 376.0
margin_bottom = 300.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.396078, 0.25098, 0.384314, 1 )
text = "Respuesta Guardada"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Saved4" type="Label" parent="SavedNode"]
margin_left = 480.0
margin_top = 272.0
margin_right = 728.0
margin_bottom = 300.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.396078, 0.25098, 0.384314, 1 )
text = "Respuesta Guardada"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Saved5" type="Label" parent="SavedNode"]
margin_left = 128.0
margin_top = 416.0
margin_right = 376.0
margin_bottom = 444.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.396078, 0.25098, 0.384314, 1 )
text = "Respuesta Guardada"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Saved6" type="Label" parent="SavedNode"]
margin_left = 480.0
margin_top = 416.0
margin_right = 728.0
margin_bottom = 444.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.396078, 0.25098, 0.384314, 1 )
text = "Respuesta Guardada"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelNode" type="Node" parent="."]

[node name="Panel1" parent="PanelNode" instance=ExtResource( 3 )]
margin_left = 88.0
margin_top = 88.0
margin_right = 408.0
margin_bottom = 216.0
password = "PoKeR0101*"

[node name="Panel2" parent="PanelNode" instance=ExtResource( 3 )]
margin_left = 440.0
margin_top = 88.0
margin_right = 760.0
margin_bottom = 216.0
secure = false
password = "12345"

[node name="Panel3" parent="PanelNode" instance=ExtResource( 3 )]
margin_left = 88.0
margin_top = 232.0
margin_right = 408.0
margin_bottom = 360.0
secure = false
password = "contraseña"

[node name="Panel4" parent="PanelNode" instance=ExtResource( 3 )]
margin_left = 440.0
margin_top = 232.0
margin_right = 760.0
margin_bottom = 360.0
password = "F4m1l14*"

[node name="Panel5" parent="PanelNode" instance=ExtResource( 3 )]
margin_left = 88.0
margin_top = 376.0
margin_right = 408.0
margin_bottom = 504.0
secure = false
password = "usuario"

[node name="Panel6" parent="PanelNode" instance=ExtResource( 3 )]
margin_left = 440.0
margin_top = 376.0
margin_right = 760.0
margin_bottom = 504.0
password = "#futb0L17"
[connection signal="pressed" from="FinishedButton" to="." method="_on_FinishedButton_pressed"]
[connection signal="toggled" from="PanelNode/Panel1" to="." method="_countCorrectAnswers"]
[connection signal="toggled" from="PanelNode/Panel2" to="." method="_countCorrectAnswers"]
[connection signal="toggled" from="PanelNode/Panel3" to="." method="_countCorrectAnswers"]
[connection signal="toggled" from="PanelNode/Panel4" to="." method="_countCorrectAnswers"]
[connection signal="toggled" from="PanelNode/Panel5" to="." method="_countCorrectAnswers"]
[connection signal="toggled" from="PanelNode/Panel6" to="." method="_countCorrectAnswers"]
